# spot-mirror

./: .gitlab-ci.yml  README  configure.ac
python/spot/: impl.i
spot/: Makefile.am
spot/ltsmin/: porinfos.cc  porinfos.hh  spins_kripke.hh  spins_kripke.hxx
spot/mc/: Makefile.am  bloemen_ec.hh  cndfs.hh  deadlock.hh  deadlock_example_mpi.hh  deadlock_mpi.hh  deadlock_no_shared_mpi.hh  deadlock_shared_mpi.hh  mc.hh  mc_mpi.hh  mc_no_shared_mpi.hh  mc_shared_mpi.hh
spot/misc/: timer.cc  timer.hh
spot/mpi/: Makefile.am  libspotmpi.pc.in  mpi.cc  mpi.hh  process.cc  process.hh
spot/priv/: Makefile.am  mpi.hh  mpi_header.hh
spot/twaalgos/: Makefile.am
spot/uf/: uf.cc
test mpi/: hostfile  ring_c.c  source.me
tests/: Makefile.am
tests/ltsmin/: check.test  modelcheck.cc  modelcheck_mpi.cc
uf/: uf.cc
